# guiagents

./: .gitignore  README.md  logging_config.yaml  pyproject.toml  requirements.txt
configs/: action_narration.yaml  example_secrets.yaml  oc_train.yaml
experiments/: action_narration.py  benchmark.py
experiments/configs/: action_narration.yaml  example_secrets.yaml  readme.md
notebooks/: create_yt_dataset.ipynb
scripts/: add_cursors_yolo.py
src/guiagents/: __init__.py  utils.py
src/guiagents/agents/: __init__.py  deepseek.py  seeclick.py
src/guiagents/utils/: __init__.py
train/: oc_train.py  train_observational_cloning.py
